--- a/Home.html
+++ b/Home.html
@@ -213,7 +213,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8">
-                    <div class=" animated fadeInLeft" data-animate="fadeInLeft">
+                    <div>
                         <h3 class="block-head" style="margin-left: 0px ;">
                             Responsive Web Design
                         </h3>
@@ -227,25 +227,94 @@
                             consectetur adipiscing elit.
                         </P>
                         <ul class="list-right">
-                            <li >Lorem ipsum dolor sit amet,
+                            <li>Lorem ipsum dolor sit amet,
                                 consectetur adipiscing elit pellentesque</li>
-                            <li >
+                            <li>
                                 Suspendisse hendrerit id lacus id lobortis vestibulum quam elit</li>
-                            <li >
+                            <li>
                                 Fusce scelerisque pellentesqu suspendisse elementum adipiscing</li>
-                            <li >
+                            <li>
                                 Feugiat sodales pretium massa euismod tempus suspendisse hendrerit</li>
                         </ul>
                     </div>
                 </div>
                 <div class="col-lg-4">
                     <div class="pc">
-                        <img  class="img-responsive" alt="" src="images/devices.png" />
+                        <img class="img-responsive" alt="" src="images/devices.png" />
                     </div>
                 </div>
             </div>
         </div>
         <!--end responsive web deisgn-->
+        <!--start  fun staff-->
+        <div class="fun-staff-o ">
+            <div class="fun-staff sectionWrapper">
+                <div class="container text-center">
+                    <div class="row">
+                        <div class="col-lg-2">
+                            <div class="fun-number">1962</div>
+                            <div class="fun-text">Traffic</div>
+                            <div class="fun-icon">
+                                <i class="fa fa-leaf"> </i>
+                            </div>
+                        </div>
+                        <div class="col-lg-2">
+                            <div class="fun-number">136</div>
+                            <div class="fun-text">Working Hours</div>
+                            <div class="fun-icon">
+                                <i class="fa fa-clock-o"> </i>
+                            </div>
+                        </div>
+                        <div class="col-lg-4">
+                            <div class="fun-title">
+                                Let’s Have Some
+                                <span>Fun</span>
+                            </div>
+                        </div>
+                        <div class="col-lg-2">
+                            <div class="fun-number">2350</div>
+                            <div class="fun-text">Users</div>
+                            <div class="fun-icon">
+                                <i class="fa fa-group"> </i>
+                            </div>
+                        </div>
+                        <div class="col-lg-2">
+                            <div class="fun-number">985</div>
+                            <div class="fun-text">Notifications</div>
+                            <div class="fun-icon">
+                                <i class="fa fa-bell"> </i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--end fun staff-->
+        <!-- start recent projects -->
+        <div class="section sectionWrapper">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-3">
+                        <h3 class="  heading">
+                            Recent
+                            <span>projects</span>
+                        </h3>
+                        <p>
+                            Browse our recent projects and you will see how we work and what are the technologies we use
+                            to build websites with a high quality and profissional ways to present you all what you
+                            need,
+                            All we aim is to make our customers satisfied and happy with all of our services.
+                        </p>
+                        <div class="viewAll-home">
+                            <a class="btn browse_btn" href="#">Browse All Projects</a>
+                        </div>
+                    </div>
+                   
+
+                </div>
+            </div>
+        </div>
+        <!--end  recent projects -->
 
 
         <!-- JS, Popper.js, and jQuery -->
@@ -260,7 +329,7 @@
         </script>
         <script src="js/Home.js"></script>
         <script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
-     
+
         <script type="text/javascript" src="slick/slick.min.js"></script>
 
 </body>
