--- a/Home.html
+++ b/Home.html
@@ -19,7 +19,7 @@
     <!--welcome box start-->
     <div class="welcome">
         <div class="container">
-            <h3 class="center block-head">
+            <h3 class=" block-head  welcome_text text-center">
                 <span class="main-color">
                     Welcome To EXCEPTION -Business HTML Template
                 </span>
@@ -115,20 +115,20 @@
     </div>
     <!--end service box -->
     <!--start wrapper section-->
-    <div class="sectionwrapper">
+    <div class="sectionwrapper skills">
 
         <div class="container">
             <div class="row">
                 <div class="col-lg-7">
                     <div>
-                        <h3 class="block-head" style="margin-left:0px !important">
+                        <h3 class="block-head" >
                             What They Said About Us
                         </h3>
 
                     </div>
                 </div>
                 <div class="col-lg-5 ">
-                    <h3 class="block-head " style="margin-left:0px !important">
+                    <h3 class="block-head " >
                         Our Skills
                     </h3>
                     <ul class="levels">
@@ -209,12 +209,12 @@
 
     <!--end client slider-->
     <!--start responsive web design-->
-    <div class="sectionWrapper">
+    <div class="sectionWrapper web_design">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8">
                     <div>
-                        <h3 class="block-head" style="margin-left: 0px ;">
+                        <h3 class="block-head">
                             Responsive Web Design
                         </h3>
                         <P>
@@ -244,6 +244,7 @@
                     </div>
                 </div>
             </div>
+        </div>
         </div>
         <!--end responsive web deisgn-->
         <!--start  fun staff-->
@@ -394,7 +395,218 @@
             </div>
         </div>
         <!--end  recent projects -->
+        <!--start fotter-->
+        <div id="footer">
+            <div class="footer-top">
+                <div class="container ">
+                    <div class="row">
+                        <div class="col-lg-3">
+                            <h3 class="block-head ">
+                                Main Menu
+                            </h3>
+                            <ul class="footer-menu">
+                                <li><a href="#">Home Page</a></li>
+                                <li><a href="#">About Us</a></li>
+                                <li><a href="#">Our Blog</a></li>
+                                <li><a href="#">Our Portfolio</a></li>
+                                <li><a href="#">FAQ</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-lg-3">
+                            <h3 class="block-head">
+                                Our Friends
+                            </h3>
+                            <ul  class="footer-menu">
+                                <li><a href="#">adipiscing elit Integer</a></li>
+                                <li><a href="#">magna euismod</a></li>
+                                <li><a href="#">purus molestie</a></li>
+                                <li><a href="#">adipiscing elit Integer</a></li>
+                                <li><a href="#">purus molestie</a></li>
+                            </ul>
+                        </div> 
+                        <div class="col-lg-3">
+                            <h3 class="block-head">
+                                Useful Links
+                            </h3>
+                            <ul class="footer-menu">
+                                <li><a href="#">Privacy policy</a></li>
+                                <li><a href="#">Terms of use</a></li>
+                                <li><a href="#">purus molestie</a></li>
+                                <li><a href="#">adipiscing elit Integer</a></li>
+                                <li><a href="#">magna euismod</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-lg-3">
+                            <h3 class="block-head">
+                                Tag Cloud
+                            </h3>
+                            <div class="tags">
+                                <a href="#">Design</a>
+                                <a href="#">User interface</a>
+                                <a href="#">Performance</a> 
+                                <a href="#">Development</a> 
+                                <a href="#">WordPress</a> 
+                                <a href="#">SEO</a> 
+                                <a href="#">Joomla</a> 
+                                <a href="#">ASP.Net</a>
+                                <a href="#">SharePoint</a>
+                                <a href="#">Bootstrap</a>
+                             </div>
+                            
+                        </div>
+                        <hr class="hr-styles"/>
+                        <div class="col-lg-3">
+                            <h3 class="block-head">
+                                Keep in Touch
+                            </h3>
+                            <ul  class="footer-contact">
+                                <li>
+                                    <i class="fa fa-home"></i>
+                                    <span>123, Second Street name, Address.</span>
+                                </li>
+                                <li>
+                                    <i class="fa fa-globe"></i>
+                                    <a href="#">info@it-rays.com</a>
+                                </li>
+                                <li>
+                                    <i class="fa fa-phone"></i>
+                                    <span>+1 (000) 000-0000</span>
+                                </li>
+                                <li>
+                                    <i class="fa fa-map-marker"></i>
+                                    <a href="#">View our map</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class='col-lg-3'>
+                            <div class="foot-logo"></div>
+                            <p class="no-margin">
+                                Keep up on our always evolving product features and technology. Enter your e-mail and subscribe to our newsletter.
+                            </p>
+                            <form>
 
+                            </form>
+                        </div> 
+                        <div class="col-lg-3">
+                            <h3 class="block-head">
+                                Latest Tweets
+                            </h3>
+                        </div> 
+                        <div class="col-lg-3">
+                            <h3 class="block-head">
+                                Flickr Stream
+                            </h3>
+                            <ul class="flicker-feed">
+                                <li>
+                                    <a href="#">
+                                        <img src="https://live.staticflickr.com/3647/3435384001_9ed9864bb4_s.jpg" alt=""/>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <img src="https://live.staticflickr.com/3311/3436188742_caaa28c689_s.jpg" alt=""/>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <img src="https://live.staticflickr.com/3371/3436188466_418a0d8a06_s.jpg" alt=""/>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <img src="https://live.staticflickr.com/3397/3436188128_5e503cefcd_s.jpg" alt=""/>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <img src="https://live.staticflickr.com/3300/3436187796_4d228a5bde_s.jpg" alt=""/>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <img src=https://live.staticflickr.com/3386/3435382439_68b5e3742b_s.jpg" alt=""/>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <img src="https://live.staticflickr.com/3657/3436187288_e84058f54b_s.jpg" alt=""/>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <img src="https://live.staticflickr.com/3405/3436187010_c731dea9a3_s.jpg" alt=""/>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div> 
+                    </div>
+                    
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <div class="container">
+                    <div class="row">
+                        <div class='col-lg-6 copyright'>
+                            &copy; copyright
+                            <b>EXCEPTION</b> 
+                            2014. All rights reserved. 
+                            <span>
+                                <a href="#">Privacy policy</a>
+                                |
+                                <a href="#">Terms of use</a>
+                            </span>
+                        </div>
+                        <div class="col-lg-6">
+                            <ul class="social-media-list">
+                                <li class="social-icon skew-25">
+                                    <a href="#" >
+                                        <span class="fa fa-dribbble skew25 "></span>
+                                    </a>
+
+                                </li>
+                                <li class="social-icon  skew-25">
+                                    <a href="#">
+                                        <span class="fa fa-facebook skew25 "></span>
+                                    </a>
+
+                                </li>
+                                <li class="social-icon  skew-25">
+                                    <a href="#" >
+                                        <span class="fa fa-linkedin skew25"></span>
+                                    </a>
+
+                                </li>
+                                <li class="social-icon  skew-25">
+                                    <a href="#" >
+                                        <span class="fa fa-skype skew25 "></span>
+                                    </a>
+
+                                </li>
+                                <li class="social-icon  skew-25">
+                                    <a href="#" >
+                                        <span class="fa fa-tumblr skew25"></span>
+                                    </a>
+
+                                </li>
+                                <li class="social-icon  skew-25">
+                                    <a href="#" >
+                                        <span class="fa fa-twitter skew25"></span>
+                                    </a>
+
+                                </li>
+                                <li class="social-icon  skew-25">
+                                    <a href="#" >
+                                        <span class="fa fa-youtube skew25"></span>
+                                    </a>
+
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--end fotter-->
 
         <!-- JS, Popper.js, and jQuery -->
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
