--- a/Home.html
+++ b/Home.html
@@ -23,55 +23,235 @@
                 <div class="logo col-lg-3">
                     <a href="#"></a>
                 </div>
-
                 <div class="col-lg top-menu">
                     <nav class="top-nav top-menu">
                         <ul class='def-effect'>
-                            <li class="current">
+                            <li class="current ">
                                 <a href="#">
                                     <i class="fa fa-home"></i>
                                     <span>Home</span>
                                 </a>
                                 <ul>
-                                    <li style="transition-delay: 0ms;"><a href="home.html">Home Version 1</a></li>
-                                    <li style="transition-delay: 50ms;" ><a href="#">Home Version 2</a></li>
+                                    <li class='margin-down' id="home1"  style="transition-delay: 0ms;"><a href="#">Home Version 1</a></li>
+                                    <li  style="transition-delay: 50ms;" ><a href="#">Home Version 2</a></li>
                                     <li style="transition-delay: 100ms;" ><a href="#">Home Version 3</a></li>
                                     <li style="transition-delay: 150ms;" ><a href="#">Home Version 4</a></li>
                                     <li style="transition-delay: 200ms;" ><a href="#">Home Version 5</a></li>
                                     <li style="transition-delay: 250ms;" ><a href="#">Home News Magazine</a> </li>
                                 </ul>
                             </li>
-                            <li>
+                            <li class="haschildern">
                                 <a href="#">
                                     <i class="fa fa-key"></i>
                                     <span>Features</span>
                                 </a>
+                                <ul>
+                                    <li  class="haschildern margin-down" style="transition-delay: 0ms;">
+                                        <a href="#">
+                                            <i class="fa fa-send"></i>
+                                            Headers
+                                        </a>
+                                        <ul > 
+                                            <li class="margin-down" style="transition-delay: 0ms;"><a href="#" >Skewed Elements</a></li>
+                                            <li style="transition-delay: 50ms;"><a href="#">Header Top Center Logo</a></li>
+                                            <li style="transition-delay: 100ms;"><a href="#">Left Side Header</a></li>
+                                            <li style="transition-delay: 150ms;"><a href="#">Right Side Header</a></li>
+                                        </ul>
+                                    </li>
+                                    <li class="haschildern" style="transition-delay: 50ms;">
+                                        <a href="#">
+                                            <i class="fa fa-bars"></i>
+                                            Menu Styles
+                                        </a> 
+                                        <ul>
+                                             <li style="transition-delay: 0ms;"><a href="#">Default Menu</a></li>
+                                             <li style="transition-delay: 50ms;"><a href="#">Menu Style 2</a></li>
+                                             <li style="transition-delay: 100ms;"><a href="#">Menu Style 3</a></li> 
+                                             <li style="transition-delay: 150ms;"><a href="#">Menu Style 4</a></li> 
+                                        </ul>
+                                     </li>
+                                     <li style="transition-delay: 100ms;" class="haschildern">
+                                        <a href="#">
+                                            <i class="fa fa-bars"></i>
+                                            Sub Menu Styles</a> 
+                                            <ul> 
+                                                <li style="transition-delay: 0ms;"><a href="">Default Sub Menu</a></li> 
+                                                <li style="transition-delay: 50ms;"><a href="">White Sub Menu</a></li>
+                                                <li style="transition-delay: 100ms;"><a href="">Dark Sub Menu</a></li>
+                                           </ul>
+                                     </li>
+                                     <li  style="transition-delay: 150ms;" class="haschildern">
+                                        <a href="#"><i class="fa fa-bars"></i>Sub Menu Styles</a>
+                                         <ul> 
+                                            <li style="transition-delay: 0ms;"><a href="">Fade Effect</a></li>
+                                            <li style="transition-delay: 50ms;"><a href="#">Slide Up / Down Effect</a></li>
+                                            <li class="margin-down" style="transition-delay: 100ms;"><a href="#">Fade In Up Effect</a></li>
+                                            <li style="transition-delay: 150ms;"><a href="#">Fade In Down Effect</a></li>
+                                            <li style="transition-delay: 200ms;"><a href="#">Fade In Right Effect</a></li>
+                                            <li style="transition-delay: 250ms;"><a href="#">Fade In Left Effect</a></li>
+                                            <li class="margin-down" style="transition-delay: 300ms;"><a href="#">flash Effect</a></li> 
+                                            <li style="transition-delay: 350ms;"><a href="#">pulse Effect</a></li>
+                                            <li style="transition-delay: 400ms;"><a href="#">swing Effect</a></li> 
+                                            <li style="transition-delay: 450ms;"><a href="#">tada Effect</a></li> 
+                                            <li class="margin-down" style="transition-delay: 500ms;"><a href="#">wobble Effect</a></li> 
+                                            <li style="transition-delay: 550ms;"><a href="#">No Effect</a></li>
+                                         </ul>
+                                     </li>
+                                     <li  style="transition-delay: 200ms;" class="haschildern">
+                                        <a href="#">
+                                            <i class="fa fa-bookmark"></i>
+                                            Page Titles
+                                        </a> 
+                                        <ul>
+                                            <li class="margin-down" style="transition-delay: 0ms;"><a href="#">Normal Page Title</a></li>
+                                            <li style="transition-delay: 50ms;"><a href="#">Centered Page Title</a></li>
+                                            <li style="transition-delay: 100ms;"><a href="#">Page Title with Icon</a></li>
+                                            <li style="transition-delay: 150ms;"><a href="#">Centered Page Title with Icon</a></li> 
+                                            <li style="transition-delay: 200ms;"><a href="#">Dark Page Title</a></li> 
+                                            <li style="transition-delay: 250ms;"><a href="#">Dark Centered Page Title</a></li>
+                                            <li style="transition-delay: 300ms;"><a href="#">Skewed Page Title</a></li>
+                                            <li style="transition-delay: 350ms;"><a href="#">Skewed Centered Page Title </a></li> 
+                                            <li style="transition-delay: 400ms;"><a href="#">Page Title with Video Background</a></li> 
+                                            <li style="transition-delay: 450ms;"><a href="#">Minimal Page Title</a></li>
+                                        </ul>
+                                     </li>
+                                     <li  style="transition-delay: 250ms;" class="haschildern margin-down">
+                                        <a href="#"><i class="fa fa-phone"></i> Contact Pages</a>
+                                         <ul> 
+                                             <li class="margin-down" style="transition-delay: 0ms;"><a href="#">Contact 1</a></li>
+                                             <li style="transition-delay: 50ms;"><a href="#">Contact 2 </a></li>
+                                             <li style="transition-delay: 100ms;"><a href="#">Contact 3</a></li>
+                                             <li style="transition-delay: 150ms;"><a href="#">Contact 4</a></li>
+                                         </ul> 
+                                     </li>
+                                     <li style="transition-delay: 300ms;" class="haschildern">
+                                        <a href="#"><i class="fa fa-server"></i>Footers</a>
+                                         <ul>
+                                              <li class="margin-down" style="transition-delay: 0ms;"><a href="#">Footer Version 2</a></li>
+                                              <li style="transition-delay: 50ms;"><a href="#">Footer Version 3</a></li> 
+                                              <li style="transition-delay: 100ms;"><a href="#">Footer Version 4</a></li>
+                                              <li style="transition-delay: 150ms;"><a href="#">Light Colored Footer</a></li>
+                                              <li class="margin-down" style="transition-delay: 200ms;"><a href="#">Minimal Footer</a></li>
+                                         </ul> 
+                                     </li>
+                                </ul>
                             </li>
-                            <li>
+                            <li class="haschildern">
                                 <a href="#">
                                     <i class="fa fa-gift"></i>
                                     <span>Portfolio</span>
                                 </a>
+                                <ul>
+                                     <li class="margin-down" style="transition-delay: 0ms;"><a href="#">Portfolio 2 columns</a></li>
+                                     <li style="transition-delay: 50ms;"><a href="#">Portfolio 3 columns</a></li>
+                                     <li style="transition-delay: 100ms;"><a href="#">Portfolio 4 columns</a></li>
+                                     <li style="transition-delay: 150ms;"><a href="#">Portfolio full</a></li> 
+                                     <li class="margin-down" style="transition-delay: 200ms;"><a href="#">Portfolio single</a></li>
+                                     <li style="transition-delay: 250ms;"><a href="#">Portfolio single 2</a></li>
+                                </ul>
                             </li>
-                            <li>
+                            <li class="haschildern" >
                                 <a href="#">
                                     <i class="fa fa-copy"></i>
                                     <span>Pages</span>
                                 </a>
+                                <ul>
+                                     <li style="transition-delay: 0ms;"><a href="#">About us</a></li>
+                                     <li class="margin-down" style="transition-delay: 50ms;"><a href="#">About me</a></li>
+                                     <li style="transition-delay: 100ms;"><a href="#">FAQ</a></li> 
+                                     <li style="transition-delay: 150ms;"><a href="#">Find a job</a></li> 
+                                     <li style="transition-delay: 200ms;"><a href="#">Pricing</a></li>
+                                     <li class="margin-down" style="transition-delay: 250ms;"><a href="#">Services</a></li>
+                                     <li style="transition-delay: 300ms;" class="haschildern">
+                                        <a href="#">Meet the team</a> 
+                                        <ul>
+                                             <li style="transition-delay: 0ms;"><a href="#">Meet the team Style 1</a></li>
+                                             <li style="transition-delay: 50ms;"><a href="#">Meet the team Style 2</a></li>
+                                        </ul> 
+                                     </li> 
+                                     <li style="transition-delay: 350ms;"><a href="#">Our Gallery<b class="menu-hint">New</b></a></li> 
+                                     <li style="transition-delay: 400ms;"><a href="#">Page Full width</a></li>
+                                     <li class="margin-down" style="transition-delay: 450ms;"><a href="#">Page with Sidebar</a></li> 
+                                     <li style="transition-delay: 500ms;"><a href="#">Page with Left Sidebar</a></li>
+                                     <li style="transition-delay: 550ms;"><a href="#">404 Page not found</a></li>
+                                     <li style="transition-delay: 600ms;"><a href="#">Coming Soon</a></li> </ul>
                             </li>
-                            <li>
+                            <li class="haschildern" >
                                 <a href="#">
                                     <i class="fa fa-suitcase"></i>
                                     <span>Shop</span>
+                                    <ul> 
+                                        <li style="transition-delay: 0ms;" class="haschildern margin-down">
+                                            <a href="#">Shop Products listing</a> 
+                                            <ul>
+                                                  <li class="margin-down" style="transition-delay: 0ms;"><a href="#">Right Side Bar</a></li>
+                                                  <li style="transition-delay: 50ms;"><a href="#">Left Side Bar</a></li>
+                                                  <li style="transition-delay: 100ms;"><a href="#">No side bar</a></li>
+                                            </ul>
+                                        </li>
+                                        <li style="transition-delay: 50ms;" class="haschildern">
+                                            <a href="#">Product Page</a> 
+                                            <ul>
+                                                 <li style="transition-delay: 0ms;"><a href="#">Right Side Bar</a></li>
+                                                 <li style="transition-delay: 50ms;"><a href="#">Left Side Bar</a></li>
+                                                 <li style="transition-delay: 100ms;"><a href="#">No side bar</a></li> 
+                                            </ul> 
+                                        </li> 
+                                        <li style="transition-delay: 100ms;"><a href="#">Shoping cart</a></li>
+                                         <li style="transition-delay: 150ms;"><a href="#">Check out</a></li>
+                                     </ul>
                                 </a>
                             </li>
-                            <li>
+                            <li class="haschildern" >
                                 <a href="#">
                                     <i class="fa fa-book"></i>
                                     <span>Blog</span>
                                 </a>
+                                <ul>
+                                     <li style="transition-delay: 0ms;" class="haschildern margin-down">
+                                        <a href="#">Blog Large Image</a>
+                                         <ul> 
+                                             <li class="margin-down" style="transition-delay: 0ms;"><a href="#">Right Side Bar</a></li> 
+                                             <li style="transition-delay: 50ms;"><a href="#">Left Side Bar</a></li> 
+                                             <li style="transition-delay: 100ms;"><a href="#">No side bar</a></li> 
+                                        </ul>
+                                    
+                                     </li> 
+                                     <li style="transition-delay: 50ms;" class="haschildern">
+                                        <a href="#">Blog Small Image</a> 
+                                        <ul>
+                                             <li style="transition-delay: 0ms;"><a href="#">Right Side Bar</a></li>
+                                             <li style="transition-delay: 50ms;"><a href="#">Left Side Bar</a></li> 
+                                             <li style="transition-delay: 100ms;"><a href="#">No side bar</a></li> 
+                                        </ul> 
+                                      </li> 
+                                     <li style="transition-delay: 100ms;" class="haschildern">
+                                        <a href="#">Blog Timeline</a> 
+                                        <ul> 
+                                            <li style="transition-delay: 0ms;"><a href="#">Right Side Bar</a></li> 
+                                            <li style="transition-delay: 50ms;"><a href="#">Left Side Bar</a></li> 
+                                            <li style="transition-delay: 100ms;"><a href="#">No side bar</a></li> 
+                                        </ul> 
+                                     </li> 
+                                     <li style="transition-delay: 150ms;" class="haschildern">
+                                        <a href="#">Blog masonry</a> 
+                                        <ul> 
+                                            <li style="transition-delay: 0ms;"><a href="#">Right Side Bar</a></li> 
+                                            <li style="transition-delay: 50ms;"><a href="#">Left Side Bar</a></li> 
+                                            <li style="transition-delay: 100ms;"><a href="#">No side bar</a></li> 
+                                        </ul>
+                                     </li> 
+                                     <li style="transition-delay: 200ms;" class="haschildern">
+                                        <a href="#">Blog Single</a>
+                                         <ul>
+                                             <li style="transition-delay: 0ms;"><a href="#">Right Side Bar</a></li>
+                                              <li style="transition-delay: 50ms;"><a href="#">Left Side Bar</a></li> 
+                                              <li style="transition-delay: 100ms;"><a href="#">No side bar</a></li>
+                                         </ul> 
+                                    </li> 
+                                </ul>
                             </li>
-                            <li>
+                            <li class="haschildern" >
                                 <a href="#">
                                     <i class="fa fa-leaf"></i>
                                     <span>Shortcodes
@@ -788,6 +968,7 @@
     <script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
 
     <script type="text/javascript" src="slick/slick.min.js"></script>
+    
 
 </body>
 
