--- a/Home.html
+++ b/Home.html
@@ -13,6 +13,7 @@
         integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" type="text/css" href="slick/slick.css" />
+    
 </head>
 
 <body>
@@ -315,6 +316,34 @@
     </div>
 
     <!--end header-->
+    <!--start slidr-->
+    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img class="d-block w-100" src="images/slider-0/s3.jpg" alt="">
+            <div class="carousel-caption d-none d-md-block">
+                <h2>check what Exepection offers</h2>
+                 <img class="img-responsive pc-left" src="images/slider-0/s-3-2.png" alt=""/>
+                 <img class="img-responsive pc-right" src="images/slider-0/s-3-1.png" alt=""/>
+              </div>
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="images/slider-0/s2.jpg" alt="">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="images/slider-0/s1.jpg" alt="">
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+    <!--end slider-->
     <!--welcome box start-->
     <div class="welcome">
         <div class="container">
@@ -641,14 +670,14 @@
             <div class="container text-center">
                 <div class="row">
                     <div class="col-lg-2">
-                        <div class="fun-number">1962</div>
+                        <div data-from="0" data-to="1962" data-speed="2000" data-refresh-interval="50"  class="fun-number count">1962</div>
                         <div class="fun-text">Traffic</div>
                         <div class="fun-icon">
                             <i class="fa fa-leaf"> </i>
                         </div>
                     </div>
                     <div class="col-lg-2">
-                        <div class="fun-number">136</div>
+                        <div data-from="0" data-to="136" data-speed="2000" data-refresh-interval="50"  class="fun-number count">136</div>
                         <div class="fun-text">Working Hours</div>
                         <div class="fun-icon">
                             <i class="fa fa-clock-o"> </i>
@@ -661,14 +690,14 @@
                         </div>
                     </div>
                     <div class="col-lg-2">
-                        <div class="fun-number">2350</div>
+                        <div data-from="0" data-to="2350" data-speed="2000" data-refresh-interval="50" class="fun-number count">2350</div>
                         <div class="fun-text">Users</div>
                         <div class="fun-icon">
                             <i class="fa fa-group"> </i>
                         </div>
                     </div>
                     <div class="col-lg-2">
-                        <div class="fun-number">985</div>
+                        <div data-from="0" data-to="985" data-speed="2000" data-refresh-interval="50" class="fun-number count">985</div>
                         <div class="fun-text">Notifications</div>
                         <div class="fun-icon">
                             <i class="fa fa-bell"> </i>
@@ -1014,10 +1043,8 @@
     </script>
     <script src="js/Home.js"></script>
     <script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
-
     <script type="text/javascript" src="slick/slick.min.js"></script>
-    
-
+    <script src="js/jquery.countTo.js"></script>
 </body>
 
 </html>
